Fix benefits spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -387,7 +387,6 @@ strong { font-weight: 700; }
 .benefits {
 	display: flex;
 	flex-wrap: wrap;
-	margin: 20px 0 5px 0;
 	> div {
 		flex: auto;
 		padding: 10px 30px 10px 0;
